<resources>
    <string name="app_name">Reeflix</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="heading_text">My video</string>
    <string name="roboto_slab_bold" translatable="false">fonts/RobotoSlab-Bold.ttf</string>
    <string name="roboto_bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="description_text">this video looks good</string>
    <string name="subscribe_btn_text">Play</string>
    <string name="pleasewait_text">please wait…</string>
    <string name="pleasewait">loading</string>
    <string name="title_shop">Home</string>
    <string name="title_gifts">Favourites</string>
    <string name="title_cart">Watch Later</string>
    <string name="title_profile">Profile</string>
    <string name="label_loading">This Is Empty View</string>
    <string name="action_search">Search</string>
    <string name="action_like">like</string>
    <string name="videotitle_hinttext">Title</string>
    <string name="description_hinttext">Description</string>
    <string name="director_hinttext">Director</string>
    <string name="producertext_hinttext">Producer</string>
    <string name="cast_hinttext">Cast</string>
    <string name="maturity_hinttext">Maturity</string>
    <string name="genre_hinttext">Genre</string>
    <string name="nextButtontext">Save</string>
    <string name="email_hinttext">Email</string>
    <string name="password_hinttext">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="create_account_text">Create New Account</string>
    <string name="sign_in_with_text">Sign in with</string>

    <!-->Registartion strings <!-->

    <string name="sign_up_text">Sign up</string>
    <string name="changephoto_text">Change Photo</string>
    <string name="name_hinttext">Name</string>
    <string name="aliasname_hinttext">Alias Name</string>
    <string name="phoneNumber_hinttext">Phone Number</string>
    <string name="address_hinttext">Address</string>
    <string name="zipcode_hinttext">Zip Code</string>
    <string name="alreadyaccount_text">Already have an account ?</string>
    <string name="accessstorage_toastmsg">No Access for storage</string>
    <string name="proupdate_toastmsg">Profile Updated Successfully!!</string>
    <string name="internetconnection_textmsg">Please check internet connection</string>
    <string name="registeringwaitloader_msg">Registering! wait…</string>
    <string name="failedregistration_stringmsg">Failed! try again</string>
    <string name="invalidphonenumber_toastmsg">Invalid phoneNumber</string>
    <string name="invalidpassword_errormsg">Invalid Password</string>
    <string name="invalidemail_errormsg">Invalid Email</string>
    <string name="login_loader">Logging…</string>


    <string name="need">We need to text you the OTP to</string>
    <string name="auth">authenticate your account</string>

    <string name="phone">Enter OTP</string>
    <string name="number">+91-4445556987</string>
    <string name="ok">OK</string>
    <string name="profile_button_text">Update Profile</string>
    <string name="profileupdate_toastmsg">Profile updated Sucessfully!!!</string>
    <string name="profileimageuploaded">Profile Image Updated Sucessfully!!</string>
    <string name="action_edit">Edit</string>
    <string name="action_logout">Logout</string>


    <string name="next">NEXT</string>
    <string name="skip">BACK</string>
    <string name="start">GOT IT</string>
    <string name="nextsplash">NEXT</string>
    <string name="skipsplash">SKIP</string>
    <string name="startsplash">GOT IT</string>

    <!-->Forgot Password strings <!-->

    <string name="newpassword_text">New Password</string>
    <string name="confirmpassword_text">Confirm Password</string>
    <string name="resetpasswordbutton_text">Reset Password</string>
    <string name="resetpassword_heardertext">Please reset your new password</string>
    <string name="emailverify_headertext">We just need your registered phone Number to send you password reset</string>
    <string name="verifyemailbutton_text">Verify phoneNumber</string>
    <string name="otpverify_headertext">We just send you otp to verify valid phoneNumber</string>
    <string name="otp_text">Otp</string>
    <string name="verifyotpbutton_text">Verify Otp</string>
    <string name="verify_email_loader">Verifying phoneNumber..</string>
    <string name="verify_otp_loader">Verifying otp..</string>
    <string name="enterotp_msg">Please enter otp</string>
    <string name="reset_password_loader">Reseting Password...</string>
    <string name="bothpasswordsame_errormsg">Both password should be same</string>
    <string name="verify">Verify</string>
    <string name="title">title</string>
    <string name="romantic_comedy_action">Romantic | Comedy | Action</string>
    <string name="_130_mins">130 mins</string>
    <string name="_01st_january_2019">01st January 2019</string>
    <string name="dummy_text_is_text_that_is_used_in_the_publishing_industry_or_by_web_designers_to_occupy_the_space_which_will_later_be_filled_with_real_content_the_most_well_known_dummy_text_is_the_lorem_ipsum_which_is_said_to_have_originated_in_the_16th_century_lorem_ipsum_is_composed_in_a_pseudo_latin_language_which_more_or_less_corresponds_to_proper_latin">Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with \'real\' content. The most well-known dummy text is the \'Lorem Ipsum\', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to \'proper\' Latin.</string>
    <string name="director">Director:</string>
    <string name="sukanta_sinha">Sukanta Sinha</string>
    <string name="producer">Producer:</string>
    <string name="abhijit_and_sushmita_roy_bank">Abhijit and Sushmita Roy Bank</string>
    <string name="writer">Writer:</string>
    <string name="abcdefghijk_lmnop">Abcdefghijk Lmnop</string>
    <string name="see_full_cast_and_crew">See full Cast and Crew</string>
    <string name="related_movies">Related Movies</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to Logout ?</string>
    <string name="recommended">Recommended</string>
    <string name="created_by_company_and_others_user">Created by company and others user</string>
    <string name="view_all">VIEW ALL</string>
    <string name="signin_text">Sign in</string>

    <string name="download_start_error">Failed to start download</string>
    <string name="no_dialog">No</string>
    <string name="yes_dialog">Yes</string>
    <string name="are_you_sure_want_to">Are you sure want to</string>
    <string name="log_out">logout ?</string>


    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=]]></string>
</resources>
