<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/customshape"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <customfonts.MyTextView_Roboto_Regular
            android:id="@+id/txt_dia"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/are_you_sure_want_to"
            android:textColor="#6e6e6e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <customfonts.MyTextView_Roboto_Regular
            android:id="@+id/txt_dia1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
           android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/log_out"
            android:textColor="#6e6e6e"
            android:textSize="20sp"
            android:textStyle="bold">

        </customfonts.MyTextView_Roboto_Regular>

        <View
            android:id="@+id/SplitLine_hor1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/gray" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">

        <customfonts.MyTextView_Roboto_Medium
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/no_dialog"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textAllCaps="false"
            android:textColor="#6e6e6e"
            android:textSize="18sp"
            android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@drawable/verticalline" />

            <customfonts.MyTextView_Roboto_Medium
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/yes_dialog"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:textColor="@color/appthemecolor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
        </RelativeLayout>


