<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventDetails"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    tools:context=".VideoListAdapter">

<RelativeLayout
    android:id="@+id/eventList_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/cardView1"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/event_imageview"
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cartoon" />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_imageview"
        android:background="@color/grey_1000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_text"
            android:maxLines="1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/pure_white"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true"
            android:fontFamily="@string/roboto_slab_bold"
            android:textSize="14sp" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rate_me"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="4dp"
            app:srb_fillColor="@color/OrangeRed"
            app:srb_borderColor="@color/OrangeRed"
            android:visibility="gone"
            app:srb_numberOfStars="5"
            app:srb_rating="4"
            app:srb_starSize="10dp"
            app:srb_stepSize="1" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description_text"
            android:visibility="gone"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/eventicon"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subscribe"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:background="@drawable/btn_cardevent"
                android:paddingLeft="-5dp"
                android:paddingRight="-5dp"
                android:text="@string/subscribe_btn_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
    </android.support.v7.widget.CardView>