<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:clickable="false"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/forgotpasswordicon" />

        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/need"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auth"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/otp_icon" />

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#00154875"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/otp_text"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="#6e6e6e"
                    android:textColorHint="#6e6e6e"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <ViewAnimator
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="3dp"
                android:background="#6e6e6e" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_verifyactivationotp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_button"
            android:text="@string/verifyotpbutton_text"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>