<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_forgot_password">


    <com.underscoretec.reeflix.Constant.CustomViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:touchscreenBlocksFocus="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/forgotpasswordicon" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="25dp">


        <TextView
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:background="#6e6e6e" />

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="#6e6e6e" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dots_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"></LinearLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:text="@string/next"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:text="@string/skip"
        android:textColor="@android:color/black" />
</RelativeLayout>
