<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="300dp">

        <TextView
            android:id="@+id/forgotText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotText"
            android:gravity="center"
            android:text="@string/emailverify_headertext"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotText1"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:textColorHint="@color/white"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/phoneNumber_hinttext"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@color/appthemecolor"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_verifyEmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/layout1"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:elevation="20dp"
            android:imeOptions="actionDone"
            android:onClick="verifyEmail"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:shadowColor="@color/blue_300"
            android:text="@string/verifyemailbutton_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>