<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/progressBar"
                android:clickable="false"
                android:progressDrawable="@drawable/circular_progress_bar" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:src="@drawable/reeflixlogo_login" />

            <LinearLayout
                android:id="@+id/mainlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="80dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/mainlayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/emailicon" />

                        <EditText
                            android:id="@+id/emailText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="30dp"
                            android:background="#00154875"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/email_hinttext"
                            android:focusableInTouchMode="true"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="5dp"
                            android:textColor="#6e6e6e"
                            android:textColorHint="#6e6e6e"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                        />


                    </LinearLayout>

                    <ViewAnimator
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="#6e6e6e" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/passwordicon" />

                        <EditText
                            android:id="@+id/passText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="3dp"
                            android:background="#00154875"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/password_hinttext"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:textColor="#6e6e6e"
                            android:textColorHint="#6e6e6e"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <ViewAnimator
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="#6e6e6e" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/round_button"
                    android:onClick="login"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/sign_in_button_text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:onClick="forgotPassword"
                    android:text="@string/forgot_password_text"
                    android:textColor="#6e6e6e"
                    android:textSize="14sp" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/mainlayout"
                android:layout_marginTop="35dp">

                <TextView
                    android:id="@+id/createaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="createAccount"
                    android:text="@string/create_account_text"
                    android:textColor="@color/appthemecolor"
                    android:textSize="14sp" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>





